--- a/Clementine/src/clementine/transcodeMusic/transcodeMusic.fxml
+++ b/Clementine/src/clementine/transcodeMusic/transcodeMusic.fxml
@@ -1,14 +1,71 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.net.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import java.net.URL?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.MenuButton?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml/1" fx:controller="clementine.transcodeMusic.TranscodeMusicController">
+<AnchorPane id="AnchorPane" prefHeight="714.0" prefWidth="555.0" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="clementine.transcodeMusic.TranscodeMusicController">
     <stylesheets>
-        <URL value="@transcodemusic.css"/>
+        <URL value="@transcodemusic.css" />
     </stylesheets>
+   <children>
+      <Pane layoutX="44.0" layoutY="25.0" prefHeight="403.0" prefWidth="467.0" style="-fx-background-color: #ffc933; -fx-background-radius: 20;">
+         <children>
+            <Label layoutX="151.0" layoutY="14.0" text="Files to transcode">
+               <font>
+                  <Font name="System Bold" size="20.0" />
+               </font>
+            </Label>
+            <Pane layoutX="50.0" layoutY="66.0" prefHeight="237.0" prefWidth="367.0" style="-fx-background-color: #ffffff;">
+               <children>
+                  <Label layoutX="14.0" layoutY="4.0" text="Filename  |" />
+                  <Label layoutX="96.0" layoutY="4.0" text="Directory   |" />
+               </children>
+            </Pane>
+            <Button fx:id="addFileButton" layoutX="43.0" layoutY="340.0" mnemonicParsing="false" onAction="#openAddFIleBrowser" prefHeight="31.0" prefWidth="116.0" text="Add File" />
+            <Button layoutX="175.0" layoutY="340.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="116.0" text="Add Directory" />
+            <Button layoutX="301.0" layoutY="340.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="116.0" style="-fx-background-color: #8f0000; -fx-font-style: #8f0000;" text="Remove" textFill="WHITE">
+               <font>
+                  <Font name="System Bold" size="15.0" />
+               </font>
+            </Button>
+         </children>
+      </Pane>
+      <Pane layoutX="43.0" layoutY="439.0" prefHeight="192.0" prefWidth="467.0" style="-fx-background-color: #ffc933; -fx-background-radius: 20;">
+         <children>
+            <Label layoutX="164.0" layoutY="14.0" text="Output Options">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Label>
+            <Label layoutX="39.0" layoutY="70.0" text="Audio Format" />
+            <Label layoutX="39.0" layoutY="119.0" text="Destination" />
+            <Button layoutX="356.0" layoutY="65.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="97.0" text="Options" />
+            <Button layoutX="356.0" layoutY="114.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="97.0" text="Select" />
+            <MenuButton layoutX="142.0" layoutY="65.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="197.0" text="Ogg Vorbis (.ogg)">
+              <items>
+                <MenuItem mnemonicParsing="false" text="Action 1" />
+                <MenuItem mnemonicParsing="false" text="Action 2" />
+              </items>
+            </MenuButton>
+            <MenuButton layoutX="142.0" layoutY="114.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="197.0" text="Select Destination">
+              <items>
+                <MenuItem mnemonicParsing="false" text="Action 1" />
+                <MenuItem mnemonicParsing="false" text="Action 2" />
+              </items>
+            </MenuButton>
+         </children>
+      </Pane>
+      <Button layoutX="100.0" layoutY="651.0" mnemonicParsing="false" prefHeight="31.0" prefWidth="163.0" text="Start Transcoding" />
+      <Button fx:id="closeButton" layoutX="290.0" layoutY="651.0" mnemonicParsing="false" onAction="#closeTranscode" prefHeight="31.0" prefWidth="163.0" style="-fx-background-color: #8f0000;" text="Close" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="15.0" />
+         </font>
+      </Button>
+   </children>
 </AnchorPane>
