--- a/Clementine/src/clementine/transcodeMusic/transcodemusic.css
+++ b/Clementine/src/clementine/transcodeMusic/transcodemusic.css
@@ -3,5 +3,7 @@
  */
 
 .mainFxmlClass {
+  -fx-background-color:linear-gradient(from 25% 25% to 100% 100%,#FFA500,#FF8C00,#F4A460,#FF7F50,#FFFAFA) !important;
 
 }
+
