--- a/Clementine/src/clementine/covertesting/page2.fxml
+++ b/Clementine/src/clementine/covertesting/page2.fxml
@@ -119,5 +119,19 @@
          </children>
       </HBox>
       <Button fx:id="fetchBtn1" layoutX="695.0" layoutY="69.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="141.0" styleClass="btnfetch" stylesheets="@../covermanager/coverstyles.css" text="Fetch Missing covers" />
+      <VBox layoutX="72.0" layoutY="68.0" prefHeight="59.0" prefWidth="134.0">
+         <children>
+            <Label prefHeight="30.0" prefWidth="134.0" text="Total Albums : 5">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Label>
+            <Label prefHeight="29.0" prefWidth="134.0" text="Without Covers: 1">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Label>
+         </children>
+      </VBox>
    </children>
 </AnchorPane>
