--- a/Clementine/src/clementine/covertesting/covermangerNew.fxml
+++ b/Clementine/src/clementine/covertesting/covermangerNew.fxml
@@ -76,7 +76,7 @@
                   </Text>
                   <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Can't Help Falling In Love" textAlignment="CENTER" wrappingWidth="121.13671875">
                      <HBox.margin>
-                        <Insets left="90.0" />
+                        <Insets left="120.0" />
                      </HBox.margin>
                   </Text>
                   <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Can't Help Falling In Love" textAlignment="CENTER" wrappingWidth="121.13671875">
@@ -165,11 +165,37 @@
                         <Insets left="50.0" />
                      </HBox.margin>
                   </ImageView>
-                  <Label contentDisplay="CENTER" prefHeight="38.0" prefWidth="87.0" text="Search Songs" />
+                  <TextField prefHeight="22.0" prefWidth="149.0" styleClass="transparant" text="Search Albums">
+                     <HBox.margin>
+                        <Insets left="10.0" right="10.0" top="5.0" />
+                     </HBox.margin>
+                  </TextField>
                </children>
             </HBox>
-            <Button layoutX="659.0" layoutY="58.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="141.0" styleClass="btnfetch" stylesheets="@../covermanager/coverstyles.css" text="Fetch Missing covers" />
+            <Button layoutX="659.0" layoutY="58.0" mnemonicParsing="false" onAction="#fetch" prefHeight="36.0" prefWidth="141.0" styleClass="btnfetch" stylesheets="@../covermanager/coverstyles.css" text="Fetch Missing covers" />
             <Button fx:id="fetchBtn" layoutX="504.0" layoutY="58.0" mnemonicParsing="false" onAction="#handleButtonAction" prefHeight="36.0" prefWidth="141.0" styleClass="btnfetch" stylesheets="@../covermanager/coverstyles.css" text="Export Covers" />
+            <Label layoutX="-226.0" layoutY="26.0" prefHeight="35.0" prefWidth="436.0" text="Cover Manager">
+               <font>
+                  <Font name="System Bold" size="24.0" />
+               </font>
+               <effect>
+                  <Glow />
+               </effect>
+            </Label>
+            <VBox layoutX="8.0" layoutY="66.0" prefHeight="59.0" prefWidth="134.0">
+               <children>
+                  <Label prefHeight="30.0" prefWidth="134.0" text="Total Albums : 8">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                  </Label>
+                  <Label prefHeight="29.0" prefWidth="134.0" text="Without Covers: 3">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                  </Label>
+               </children>
+            </VBox>
          </children>
       </Pane>
       <VBox layoutX="100.0" prefHeight="720.0" prefWidth="206.0" styleClass="transparant">
