--- a/Clementine/src/clementine/covertesting/page1.fxml
+++ b/Clementine/src/clementine/covertesting/page1.fxml
@@ -28,17 +28,17 @@
       </HBox>
       <HBox layoutX="72.0" layoutY="637.0" prefHeight="59.0" prefWidth="783.0">
          <children>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Paradise (Cold Play)" textAlignment="CENTER" wrappingWidth="77.853515625">
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Paradise " textAlignment="CENTER" wrappingWidth="77.853515625">
                <HBox.margin>
                   <Insets left="40.0" />
                </HBox.margin>
             </Text>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="      Arcade(Duncan Laurence)" textAlignment="CENTER" wrappingWidth="112.46875">
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="      Arcade" textAlignment="CENTER" wrappingWidth="112.46875">
                <HBox.margin>
                   <Insets left="100.0" />
                </HBox.margin>
             </Text>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Memories(Maroon 5)" textAlignment="CENTER" wrappingWidth="89.283203125">
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Memories" textAlignment="CENTER" wrappingWidth="89.283203125">
                <HBox.margin>
                   <Insets left="130.0" />
                </HBox.margin>
@@ -84,13 +84,13 @@
       </HBox>
       <HBox layoutX="85.0" layoutY="370.0" prefHeight="50.0" prefWidth="779.0">
          <children>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Halo (Beyonce)" textAlignment="CENTER" wrappingWidth="134.13671875" />
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Impossible -James Arthur" textAlignment="CENTER" wrappingWidth="119.138671875">
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Divide" textAlignment="CENTER" wrappingWidth="134.13671875" />
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Impossible " textAlignment="CENTER" wrappingWidth="119.138671875">
                <HBox.margin>
                   <Insets left="100.0" />
                </HBox.margin>
             </Text>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Can't Help Falling In Love" textAlignment="CENTER" wrappingWidth="121.13671875">
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Minus" textAlignment="CENTER" wrappingWidth="121.13671875">
                <HBox.margin>
                   <Insets left="100.0" />
                </HBox.margin>
@@ -151,5 +151,19 @@
          </children>
       </HBox>
       <Button fx:id="fetchBtn1" layoutX="714.0" layoutY="68.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="141.0" styleClass="btnfetch" stylesheets="@../covermanager/coverstyles.css" text="Fetch Missing covers" />
+      <VBox layoutX="85.0" layoutY="57.0" prefHeight="59.0" prefWidth="134.0">
+         <children>
+            <Label prefHeight="30.0" prefWidth="134.0" text="Total Albums : 7">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Label>
+            <Label prefHeight="29.0" prefWidth="134.0" text="Without Covers: 3">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Label>
+         </children>
+      </VBox>
    </children>
 </AnchorPane>
