--- a/Clementine/src/clementine/covertesting/page6.fxml
+++ b/Clementine/src/clementine/covertesting/page6.fxml
@@ -29,7 +29,7 @@
       <HBox layoutX="65.0" layoutY="446.0" prefHeight="174.0" prefWidth="884.0" />
       <HBox layoutX="85.0" layoutY="370.0" prefHeight="50.0" prefWidth="779.0">
          <children>
-            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Halo (Beyonce)" textAlignment="CENTER" wrappingWidth="134.13671875" />
+            <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Halo " textAlignment="CENTER" wrappingWidth="134.13671875" />
             <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Impossible " textAlignment="CENTER" wrappingWidth="119.138671875">
                <HBox.margin>
                   <Insets left="80.0" />
@@ -64,5 +64,19 @@
          </children>
       </HBox>
       <Button fx:id="fetchBtn1" layoutX="547.0" layoutY="68.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="141.0" styleClass="btnfetch" stylesheets="@../covermanager/coverstyles.css" text="Export Covers" />
+      <VBox layoutX="98.0" layoutY="57.0" prefHeight="59.0" prefWidth="134.0">
+         <children>
+            <Label prefHeight="30.0" prefWidth="134.0" text="Total Albums : 2">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Label>
+            <Label prefHeight="29.0" prefWidth="134.0" text="Without Covers: 1">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+            </Label>
+         </children>
+      </VBox>
    </children>
 </AnchorPane>
